# torchtitan

./: .gitignore  debug_simpleFSDP.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: datasets.md
scripts/estimate/: README.md  ROBUST_MEMORY_COMPARISON.md  compare_memory_robust.py  compare_memory_usage.py  estimate_fsdp_memory.sh  run_memory_comparison.sh  run_robust_memory_comparison.sh  test_memory_tracker.py
tests/: test_compile_config.py  test_dataset_cache.py
torchtitan/: train.py
torchtitan/components/: loss.py  memory_tracker.py  metrics.py
torchtitan/config/: job_config.py
torchtitan/datasets/: cache_utils.py  hf_datasets.py
torchtitan/experiments/flux/: loss.py
torchtitan/experiments/llama4/infra/: parallelize.py
torchtitan/experiments/simple_fsdp/: parallelize.py
torchtitan/models/llama3/: __init__.py
torchtitan/models/llama3/infra/: parallelize.py
torchtitan/models/llama3/model/: model.py
torchtitan/models/llama3/train_configs/: debug_model.toml  llama3_8b.toml
torchtitan/tools/: profiling.py
