# ---- All project specifications ---- #
[project]
name = "torchtitan"
description = "A PyTorch native platform for training generative AI models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
keywords = ["pytorch", "training", "llm"]
dependencies = [
    # PyTorch nightly for Linux (overridden to latest)
    "torch",
    
    # Stateful Dataloader
    "torchdata>=0.8.0",

    # Hugging Face integrations
    "datasets>=2.21.0",

    # Tokenization
    "tokenizers",

    # Miscellaneous
    "tomli>=1.1.0",
    "fsspec",
    "tyro",
    "tensorboard",
    "matplotlib"
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch/torchtitan"
Documentation = "https://github.com/pytorch/torchtitan/tree/main/docs"
Issues = "https://github.com/pytorch/torchtitan/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "wandb"
]

[tool.setuptools.dynamic]
version = {file = "assets/version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["torchtitan*"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks

# ---- uv configuration for PyTorch nightly ---- #
[tool.uv]
prerelease = "allow"
override-dependencies = [
    "torch==2.9.0.dev20250723+cu126",
    "pytorch-triton==3.4.0+git11ec6354"
]

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-nightly" }]
pytorch-triton = [{ index = "pytorch-nightly" }]
